Add copy code button

--- a/development/docs-template.ejs
+++ b/development/docs-template.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= headerText %> - TurboWarp Extension Documentation</title>
-    <link rel="canonical" href="https://extensions.turbowarp.org/<%= slug %>">
+    <title><%= headerText %> - Extension Documentation</title>
+    <link rel="canonical" href="https://scsupercraft.github.io/extensions/<%= slug %>">
     <style>
       :root {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -135,7 +135,7 @@
       <div>
       <a href="/">
         <img src="/turbowarp.svg" alt="">
-        <span>TurboWarp Extension Gallery</span>
+        <span>SCsupercraft's Extension Gallery</span>
       </a>
       </div>
     </nav>
@@ -151,12 +151,11 @@
 
       <footer>
         <p>
-          This page is <a href="https://github.com/TurboWarp/extensions/tree/master/docs">open source</a>.
+          This page is <a href="https://github.com/SCsupercraft/extensions/tree/master/docs">open source</a>.
           <% if (usesScratchBlocks) { %>
             Blocks rendered with <a href="https://scratchblocks.github.io/">scratchblocks</a>.
           <% } %>
         </p>
-        <p>TurboWarp is not affiliated with Scratch, the Scratch Team, or the Scratch Foundation.</p>
       </footer>
     </main>
 
