--- a/development/homepage-template.ejs
+++ b/development/homepage-template.ejs
@@ -259,7 +259,7 @@
       </h1>
 
       <p>
-        To use these extensions in PenguinMod or TurboWarp (if compatible), hover over the extension and press the button to copy its URL. Then go to the editor, open the extension chooser, then choose the "Custom Extension" option at the bottom, and enter the URL.
+        To use these extensions in PenguinMod or TurboWarp (if compatible), hover over the extension and press the button to copy its Code. Then go to the editor, open the extension chooser, then choose the "Custom Extension" option, select text and paste the code. Make sure that run without sandbox is checked!
       </p>
 
       <div class="infobox infobox-warning">
