Add profile picture

--- a/development/docs-template.ejs
+++ b/development/docs-template.ejs
@@ -134,7 +134,7 @@
     <nav role="navigation">
       <div>
       <a href="/">
-        <img src="/turbowarp.svg" alt="">
+        <img src="/extensions/scsupercraft.png" alt="">
         <span>SCsupercraft's Extension Gallery</span>
       </a>
       </div>
