--- a/development/docs-template.ejs
+++ b/development/docs-template.ejs
@@ -133,7 +133,7 @@
   <body>
     <nav role="navigation">
       <div>
-      <a href="/">
+      <a href="/extensions/">
         <img src="/extensions/scsupercraft.png" alt="">
         <span>SCsupercraft's Extension Gallery</span>
       </a>
